# Cerberus

./: README.md  pyproject.toml  setup.py
cerberus/: __init__.py
cerberus/helper/: formatting.py
cerberus/predictors/: __init__.py  abstract_multivariate.py  abstract_univariate.py  hybrid.py  multivarhybrid.py  multivarstandard.py  standard.py  univarhybrid.py  univarstandard.py
cerberus/predictors/blueprints_predictors/: abstract_univariate.py
exampleData/: CaliforniaHousing.csv
src/cerberus/helper/: __init__.py
src/cerberus/predictors/: __init__.py  univarstandard.py
src/cerberus/predictors/blueprints_predictors/: abstract_multivariate.py
tests/: test_formatting.py  test_hybrid.py  test_multivarhybrid.py  test_multivarstandard.py  test_standard.py  test_univarhybrid.py  test_univarstandard.py
tests/test_predictors/: test_multivarhybrid.py  test_multivarstandard.py  test_univarstandard.py
