[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cerberus"
version = "0.0.1"
authors = [
  { name="Maximilian Mekiska", email="maxmekiska@gmail.com" },
]
description = "Standard and Hybrid Deep Learning Multivariate-Multi-Step & Univariate-Multi-Step Time Series Forecasting."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: MIT License",
    "Operating System :: Microsoft :: Windows 10",
]
keywords = ["machineleaning", "keras", "deeplearning", "timeseries", "forecasting"]
dependencies = [
    "tensorflow==2.9.1",
    "scikit-learn==0.21.3",
    "matplotlib==3.5.2",
    "numpy==1.21.6",
    "pandas==0.25.1",
]

[project.urls]
"Homepage" = "https://github.com/maxmekiska/Cerberus"
"Bug Tracker" = "https://github.com/maxmekiska/Cerberus/issues"
